Fets els apartats TODO generals.

--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -395,7 +395,7 @@
    "id": "7937aff8",
    "metadata": {},
    "source": [
-    "##### Proporcion de calibres sobre Total Volume"
+    "##### Proporción de calibres sobre Total Volume"
    ]
   },
   {
@@ -453,7 +453,7 @@
    "id": "4bc9fbef",
    "metadata": {},
    "source": [
-    "##### Proporcion por tipo de bolsa sobre Total Bags"
+    "##### Proporción por tipo de bolsa sobre Total Bags"
    ]
   },
   {
@@ -998,6 +998,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6d9d1d67",
+   "metadata": {},
+   "source": [
+    "* TODO "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94724d36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convencional_region_mean_total = df_convencionals.groupby('region').agg({'Total Volume':'mean', 'AveragePrice':'mean'})#.nlargest(6)\n",
+    "convencional_region_mean_total['region_class'] = convencional_region_mean_total.index.map(av.region_classification)\n",
+    "classification_colors = {'City':'green' ,'Region':'yellow' ,'GreaterRegion':'orange', 'State':'red'}\n",
+    "fig, ax= plt.subplots(figsize=(20,4))\n",
+    "x_values = convencional_region_mean_total['Total Volume']\n",
+    "total_mean = df_convencionals['AveragePrice'].mean()\n",
+    "y_values = (convencional_region_mean_total['AveragePrice'] - total_mean)*100/total_mean\n",
+    "c_values= convencional_region_mean_total['region_class'].map(classification_colors)\n",
+    "\n",
+    "plt.scatter(x= x_values, y= y_values)\n",
+    "plt.ylabel('% Average price deviation')\n",
+    "plt.xlabel('Market size')\n",
+    "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e4602968",
    "metadata": {},
    "source": [
@@ -1033,6 +1063,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f9362c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cp_cleaned = df_cp[df_cp['region_class'] !='TotalUS'].copy()\n",
+    "convencional_region_mean_total = df_cp_cleaned.groupby(['region','type']).agg({'Total Volume':'sum', 'AveragePrice':'mean'})#.nlargest(6)\n",
+    "\n",
+    "for region in pd.unique(df_cp_cleaned['region']):\n",
+    "    convencional_region_mean_total.loc[(region, 'organic'),'Total Volume'] = convencional_region_mean_total.loc[(region, 'conventional'),'Total Volume']\n",
+    "\n",
+    "new_convencional_region_mean_total= convencional_region_mean_total.reset_index(level='type') \n",
+    "type_coloring= {'organic':'green', 'conventional':'gray'}\n",
+    "\n",
+    "fig, ax= plt.subplots(figsize=(20,4))\n",
+    "x_values = new_convencional_region_mean_total['Total Volume']\n",
+    "total_mean = new_convencional_region_mean_total['AveragePrice'].mean()\n",
+    "y_values = (new_convencional_region_mean_total['AveragePrice'] - total_mean)*100/total_mean\n",
+    "c_values= new_convencional_region_mean_total['type'].map(type_coloring)\n",
+    "\n",
+    "plt.scatter(x= x_values, y= y_values, c=c_values)\n",
+    "plt.ylabel('% Average price deviation')\n",
+    "plt.xlabel('Market size')\n",
+    "plt.grid()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0c5aa662-d255-45f0-9281-2f221a36eee2",
    "metadata": {},
@@ -1045,7 +1103,7 @@
    "id": "50f15efe-2d06-486a-bc4d-4f4679974a10",
    "metadata": {},
    "source": [
-    "#### Separar alvocats convencionals i alvocats orgànics"
+    "#### Separar alvocados convencionales y organicos"
    ]
   },
   {
@@ -1054,14 +1112,91 @@
    "id": "b3ef45f3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_cp_cleaned = df_cp.copy()\n",
+    "df_cp_cleaned = df_cp[df_cp.region == 'TotalUS'].copy() \n",
+    "region_largest= df_cp_cleaned.groupby('type')['Total Volume'].sum().nlargest(2).index\n",
+    "transparencia = .5\n",
+    "for type in region_largest:\n",
+    "    df_cp_temp = df_cp_cleaned[df_cp_cleaned['type'] ==type]\n",
+    "    df_cp_temp['AveragePrice'].hist(bins=50, label=str(type), alpha = transparencia)\n",
+    "    plt.title('Distribución del precio medio según tipo de alvocado - TotalUS')\n",
+    "    plt.xlabel('Average Price')\n",
+    "    plt.ylabel('Frecuencia')\n",
+    "    plt.legend(loc='best')\n",
+    "    transparencia += .3\n",
+    "plt.show()\n",
+    "\n",
+    "df_cp_cleaned = df_cp.copy()\n",
+    "df_cp_cleaned = df_cp[df_cp.region != 'TotalUS'].copy() \n",
+    "region_largest= df_cp_cleaned.groupby('type')['Total Volume'].sum().nlargest(2).index\n",
+    "\n",
+    "transparencia = .5\n",
+    "for type in region_largest:\n",
+    "    df_cp_temp = df_cp_cleaned[df_cp_cleaned['type'] ==type]\n",
+    "    df_cp_temp['AveragePrice'].hist(bins=50, label=str(type), alpha = transparencia)\n",
+    "    plt.title('Distribución del precio medio según tipo de alvocado excluido TotalUS')\n",
+    "    plt.xlabel('Average Price')\n",
+    "    plt.ylabel('Frecuencia')\n",
+    "    plt.legend(loc='best')\n",
+    "    transparencia += .3\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f083904f",
+   "metadata": {},
+   "source": [
+    "#### Total Volume respecto al conjunto de volumenes por calibres de HASS S, L y XL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fed950a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Para seleccionar unicamente las regiones propias , descartamos Total US para la vista gráfica\n",
+    "df_cp_cleaned = df_cp[df_cp.region != 'TotalUS'].copy() \n",
+    "df_cp_cleaned['Suma Volums'] = df_cp_cleaned['Volume_Hass_S'] + df_cp_cleaned['Volume_Hass_L'] + df_cp_cleaned['Volume_Hass_XL']\n",
+    "df_cp_cleaned['Variacio'] = (df_cp_cleaned['Total Volume'] - df_cp_cleaned['Suma Volums']) *100 /df_cp_cleaned['Total Volume']\n",
+    "# df_cp_cleaned_city = df_cp_cleaned[df_cp_cleaned['region_class']=='City']\n",
+    "region_largest= df_cp_cleaned.groupby('region')['Total Volume'].sum().nlargest(5).index\n",
+    "\n",
+    "transparencia = 1\n",
+    "for region in region_largest:#, 'TotalUS']:#.nlargest(6)\n",
+    "    df_cp_temp = df_cp_cleaned[df_cp_cleaned['region'] ==region]\n",
+    "    df_cp_temp['Variacio'].hist(bins=50, label=str(region), alpha = transparencia)\n",
+    "    plt.title('Distribución del % variación Total Volume respecto als conjunto de calibres')\n",
+    "    plt.xlabel('% variación')\n",
+    "    plt.ylabel('Frecuencia')\n",
+    "    plt.legend(loc='best')\n",
+    "    transparencia-=0.2\n",
+    "plt.show()\n",
+    "\n",
+    "transparencia = 1\n",
+    "for region in ['LosAngeles', 'NewYork', 'Houston']:#, 'TotalUS']:#.nlargest(6)\n",
+    "    df_cp_temp = df_cp_cleaned[df_cp_cleaned['region'] ==region]\n",
+    "    df_cp_temp['Variacio'].hist(bins=50, label=str(region), alpha = transparencia)\n",
+    "    plt.title('Distribución del % variación Total Volume respecto als conjunto de calibres')\n",
+    "    plt.xlabel('% variación')\n",
+    "    plt.ylabel('Frecuencia')\n",
+    "    plt.legend(loc='best')\n",
+    "    transparencia-=0.3\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "410f1e5e-6277-44ba-8670-02f23a7f9aab",
    "metadata": {},
    "source": [
-    "#### Impacto del precio en las ventas"
+    "#### Impacto del precio en las ventas\n",
+    "* TODO: Aqui podem veure que a majors mercats el preu mig tendeix a abaratirse. \n",
+    "* Aqui estem prenent cada regio com equivalentment valida  cambiar el 2018 no parece afectar los resultados"
    ]
   },
   {
@@ -1070,7 +1205,27 @@
    "id": "72661bb2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "convencional_df = df_cp_cleaned[df_cp_cleaned['type']=='conventional']\n",
+    "organic_df = df_cp_cleaned[df_cp_cleaned['type']=='organic']\n",
+    "\n",
+    "convencional_region_mean_total = convencional_df.groupby('region').agg({'Total Volume':'sum', 'AveragePrice':'mean'})#.nlargest(6)\n",
+    "organic_region_mean_total = organic_df.groupby('region').agg({'AveragePrice':'mean'})#.nlargest(6)\n",
+    "\n",
+    "convencional_region_mean_total['Price difference'] = organic_region_mean_total['AveragePrice'] - convencional_region_mean_total['AveragePrice'] \n",
+    "\n",
+    "# display(new_df)\n",
+    "fig, ax= plt.subplots(figsize=(20,4))\n",
+    "x_values = convencional_region_mean_total['Total Volume']\n",
+    "# total_mean = new_convencional_region_mean_total['AveragePrice'].mean()\n",
+    "y_values = convencional_region_mean_total['Price difference'] #(new_convencional_region_mean_total['AveragePrice'] - total_mean)*100/total_mean\n",
+    "# c_values= convencional_region_mean_total['type'].map(type_coloring)\n",
+    "\n",
+    "plt.scatter(x= x_values, y= y_values)#, c=c_values)\n",
+    "plt.ylabel('Price difference organic vs conventional')\n",
+    "plt.xlabel('Market size')\n",
+    "plt.grid()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1118,7 +1273,7 @@
    "id": "edaa99db-948c-4549-8772-acb13b6a62a1",
    "metadata": {},
    "source": [
-    "#### Correlacion volumen total entre de las \"grandes regiones\" y \"regiones\" con total US\n",
+    "#### Correlación volumen total entre las \"grandes regiones\" y \"regiones\" con total US\n",
     "* TODO: IMPORTANT VOLUM VENTAS GREATERREGIONS == TOTALUS"
    ]
   },
@@ -1161,7 +1316,7 @@
    "id": "68bd45dd-adad-43ec-b9b9-9589c8524398",
    "metadata": {},
    "source": [
-    "#### Correlacion de Volumen Total de las ciudades con Volumen de Total US (alvocado conventional)"
+    "#### Correlación de Volumen Total de las ciudades con Volumen de Total US (alvocado conventional)"
    ]
   },
   {
@@ -1320,19 +1475,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_cp_cleaned = df_cp.copy()\n",
     "df_USA = df_cp_cleaned[df_cp_cleaned['region']=='TotalUS'].copy()\n",
     "df_USA = df_USA[df_USA['type']=='conventional']#.copy()\n",
     "df_media = df_USA.groupby([pd.Grouper(key='Date', freq='QS')]).agg({'AveragePrice':'mean', 'Total Volume':'sum'}).reset_index()\n",
     "df_media = df_USA.groupby(['Date']).agg({'AveragePrice':'mean', 'Total Volume':'sum'}).reset_index()\n",
-    "\n",
-    "df_media['Date offset'] = df_media['Date'] - pd.DateOffset(months=5)\n",
-    "\n",
+    "#df_media['Date offset'] = df_media['Date'] - pd.DateOffset(months=5)\n",
     "# display(df_temp)\n",
-    "#%%\n",
+    "\n",
     "fig, ax1 = plt.subplots(figsize=(12,4))\n",
-    "#plt.title('Estudio economico')\n",
+    "plt.title('Estudio de precios')\n",
     "color = 'tab:red'\n",
-    "ax1.set_xlabel('Data')\n",
+    "ax1.set_xlabel('Fecha')\n",
     "ax1.set_ylabel('Volum ventas', color=color)\n",
     "ax1.plot(df_media['Date'], df_media['Total Volume'], color=color)\n",
     "ax1.tick_params(axis='y', labelcolor=color)\n",
@@ -1340,7 +1494,7 @@
     "\n",
     "ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
     "color = 'tab:blue'\n",
-    "ax2.set_ylabel('Average Price (€)', color=color)  # we already handled the x-label with ax1\n",
+    "ax2.set_ylabel('Average Price', color=color)  # we already handled the x-label with ax1\n",
     "ax2.plot(df_media['Date'], df_media['AveragePrice'], color=color)\n",
     "ax2.tick_params(axis='y', labelcolor=color)\n",
     "# plt.ylim(0, 5)\n",
@@ -1487,7 +1641,7 @@
     "df_cleaned_great_regions = df_cleaned_great_regions[(df_cleaned_great_regions['Date']<'2017-06-15')&(df_cleaned_great_regions['Date']>'2017-04-15')]\n",
     "great_regions = pd.unique(df_cleaned_great_regions['region'])\n",
     "\n",
-    "fig, ax= plt.subplots(figsize=(20,8))\n",
+    "fig, ax= plt.subplots(figsize=(12,4))\n",
     "for region in great_regions:\n",
     "    df_temp_region = df_cleaned_great_regions[df_cleaned_great_regions['region'] ==region ]\n",
     "    df_date_region= df_temp_region.groupby('Date')['Total Volume'].sum()\n",
@@ -1714,110 +1868,6 @@
     "plt.title('City')\n",
     "plt.grid()\n",
     "plt.figure()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "265f51cf",
-   "metadata": {},
-   "source": [
-    " ### TODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cb6c3c7c",
-   "metadata": {},
-   "source": [
-    "* Aqui podem veure que a majors mercats el preu mig tendeix a abaratirse. Aqui estem prenent cada regio com equivalentment valida\n",
-    "* cambiar el 2018 no parece afectar los resultados\n",
-    "\n",
-    "* TODO: Xavi el grafic es veu diferent respecte al que tens a \"Xavi/0_data_set_Xavi.ipynb\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d01bb8ff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "convencional_region_mean_total = df_cp_cleaned.groupby(['region','type']).agg({'Total Volume':'sum', 'AveragePrice':'mean'})#.nlargest(6)\n",
-    "\n",
-    "for region in pd.unique(df_cp_cleaned['region']):\n",
-    "    convencional_region_mean_total.loc[(region, 'organic'),'Total Volume'] = convencional_region_mean_total.loc[(region, 'conventional'),'Total Volume']\n",
-    "\n",
-    "new_convencional_region_mean_total= convencional_region_mean_total.reset_index(level='type') \n",
-    "\n",
-    "type_coloring= {'organic':'green', 'conventional':'gray'}\n",
-    "\n",
-    "# display(new_df)\n",
-    "fig, ax= plt.subplots(figsize=(20,4))\n",
-    "x_values = new_convencional_region_mean_total['Total Volume']\n",
-    "total_mean = new_convencional_region_mean_total['AveragePrice'].mean()\n",
-    "y_values = (new_convencional_region_mean_total['AveragePrice'] - total_mean)*100/total_mean\n",
-    "c_values= new_convencional_region_mean_total['type'].map(type_coloring)\n",
-    "\n",
-    "plt.scatter(x= x_values, y= y_values, c=c_values)\n",
-    "plt.ylabel('% Average price deviation')\n",
-    "plt.xlabel('Market size')\n",
-    "plt.grid()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d76ecad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "convencional_region_mean_total = df_convencionals.groupby('region').agg({'Total Volume':'mean', 'AveragePrice':'mean'})#.nlargest(6)\n",
-    "convencional_region_mean_total['region_class'] = convencional_region_mean_total.index.map(av.region_classification)\n",
-    "\n",
-    "classification_colors = {'City':'green' ,'Region':'yellow' ,'GreaterRegion':'orange', 'State':'red'}\n",
-    "\n",
-    "\n",
-    "fig, ax= plt.subplots(figsize=(20,4))\n",
-    "x_values = convencional_region_mean_total['Total Volume']\n",
-    "total_mean = df_convencionals['AveragePrice'].mean()\n",
-    "y_values = (convencional_region_mean_total['AveragePrice'] - total_mean)*100/total_mean\n",
-    "c_values= convencional_region_mean_total['region_class'].map(classification_colors)\n",
-    "\n",
-    "\n",
-    "plt.scatter(x= x_values, y= y_values)\n",
-    "plt.ylabel('% Average price deviation')\n",
-    "plt.xlabel('Market size')\n",
-    "plt.grid()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "624efa17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Aqui podem veure que a majors mercats el preu mig tendeix a abaratirse. Aqui estem prenent cada regio com equivalentment valida\n",
-    "# cambiar el 2018 no parece afectar los resultados\n",
-    "convencional_df = df_cp_cleaned[df_cp_cleaned['type']=='conventional']\n",
-    "organic_df = df_cp_cleaned[df_cp_cleaned['type']=='organic']\n",
-    "\n",
-    "convencional_region_mean_total = convencional_df.groupby('region').agg({'Total Volume':'sum', 'AveragePrice':'mean'})#.nlargest(6)\n",
-    "organic_region_mean_total = organic_df.groupby('region').agg({'AveragePrice':'mean'})#.nlargest(6)\n",
-    "\n",
-    "convencional_region_mean_total['Price difference'] = organic_region_mean_total['AveragePrice'] - convencional_region_mean_total['AveragePrice'] \n",
-    "\n",
-    "# display(new_df)\n",
-    "fig, ax= plt.subplots(figsize=(20,4))\n",
-    "x_values = convencional_region_mean_total['Total Volume']\n",
-    "# total_mean = new_convencional_region_mean_total['AveragePrice'].mean()\n",
-    "y_values = convencional_region_mean_total['Price difference'] #(new_convencional_region_mean_total['AveragePrice'] - total_mean)*100/total_mean\n",
-    "# c_values= convencional_region_mean_total['type'].map(type_coloring)\n",
-    "\n",
-    "plt.scatter(x= x_values, y= y_values)#, c=c_values)\n",
-    "plt.ylabel('Price difference organic vs conventional')\n",
-    "plt.xlabel('Market size')\n",
-    "plt.grid()"
    ]
   },
   {
