Correcciones y observaciones el Estacionalidad por region.

--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -1232,7 +1232,8 @@
    "id": "9d297c93",
    "metadata": {},
    "source": [
-    "#### Estacionalidad por región"
+    "#### Estacionalidad por región\n",
+    "* Se observa que en general el precio es más alto en verano y otoño."
    ]
   },
   {
@@ -1243,11 +1244,10 @@
    "outputs": [],
    "source": [
     "get_season = av.get_season()\n",
-    "\n",
-    "df_date_price_volume = df_cp[['Date', 'region', 'AveragePrice', 'Total Volume']]\n",
-    "df_date_price_volume = df_date_price_volume.reset_index()\n",
+    "df_date_price_volume = df_cp.copy()\n",
+    "df_date_price_volume = df_date_price_volume[df_date_price_volume['region'] != 'TotalUS']\n",
+    "df_date_price_volume = df_date_price_volume[['Date', 'region', 'AveragePrice', 'Total Volume']]\n",
     "df_date_price_volume['Season'] = df_date_price_volume['Date'].apply(get_season)\n",
-    "# df_date_price_volume\n",
     "\n",
     "df_grouped_mean = df_date_price_volume.groupby(['Season','region'])['AveragePrice'].mean()\n",
     "df_grouped_mean = df_grouped_mean.reset_index()\n",
