Mostrar informacio de les regions.

--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -112,7 +112,12 @@
    "outputs": [],
    "source": [
     "print(\"Nuestra clasifiacion de clases de regiones:\",pd.unique(df_cp['region_class']))\n",
-    "display(df_cp.head(5))"
+    "#display(df_cp.head(5))\n",
+    "#display(av.region_classification['GreatRegions'])\n",
+    "g_regions = {key: value for key, value in av.region_classification.items() if value == 'GreaterRegion'}\n",
+    "display(g_regions)\n",
+    "regions = {key: value for key, value in av.region_classification.items() if value == 'Region'}\n",
+    "display(regions)"
    ]
   },
   {
@@ -1117,14 +1122,16 @@
     "df_cp_cleaned = df_cp[df_cp.region == 'TotalUS'].copy() \n",
     "region_largest= df_cp_cleaned.groupby('type')['Total Volume'].sum().nlargest(2).index\n",
     "transparencia = .5\n",
+    "plt.figure(figsize=(10, 6))\n",
     "for type in region_largest:\n",
     "    df_cp_temp = df_cp_cleaned[df_cp_cleaned['type'] ==type]\n",
-    "    df_cp_temp['AveragePrice'].hist(bins=50, label=str(type), alpha = transparencia)\n",
-    "    plt.title('Distribución del precio medio según tipo de alvocado - TotalUS')\n",
-    "    plt.xlabel('Average Price')\n",
-    "    plt.ylabel('Frecuencia')\n",
-    "    plt.legend(loc='best')\n",
-    "    transparencia += .3\n",
+    "    ax = df_cp_temp['AveragePrice'].hist(bins=50, label=str(type), alpha = transparencia)    \n",
+    "    #sns.kdeplot(df_cp_temp['AveragePrice'], ax=ax, label=str(type))\n",
+    "    transparencia += .3    \n",
+    "plt.title('Distribución del precio medio según tipo de alvocado - TotalUS')\n",
+    "plt.xlabel('Average Price')\n",
+    "plt.ylabel('Frecuencia')\n",
+    "plt.legend(loc='best')\n",
     "plt.show()\n",
     "\n",
     "df_cp_cleaned = df_cp.copy()\n",
@@ -1132,16 +1139,17 @@
     "region_largest= df_cp_cleaned.groupby('type')['Total Volume'].sum().nlargest(2).index\n",
     "\n",
     "transparencia = .5\n",
+    "plt.figure(figsize=(10, 6))\n",
     "for type in region_largest:\n",
     "    df_cp_temp = df_cp_cleaned[df_cp_cleaned['type'] ==type]\n",
-    "    df_cp_temp['AveragePrice'].hist(bins=50, label=str(type), alpha = transparencia)\n",
-    "    plt.title('Distribución del precio medio según tipo de alvocado excluido TotalUS')\n",
-    "    plt.xlabel('Average Price')\n",
-    "    plt.ylabel('Frecuencia')\n",
-    "    plt.legend(loc='best')\n",
+    "    ax = df_cp_temp['AveragePrice'].hist(bins=50, label=str(type), alpha = transparencia)    \n",
+    "    #sns.kdeplot(df_cp_temp['AveragePrice'], ax=ax, label=str(type))\n",
     "    transparencia += .3\n",
-    "\n",
-    "plt.show()"
+    "plt.title('Distribución del precio medio según tipo de alvocado excluido TotalUS')\n",
+    "plt.xlabel('Average Price')\n",
+    "plt.ylabel('Frecuencia')\n",
+    "plt.legend(loc='best')\n",
+    "plt.show()\n"
    ]
   },
   {
