Amb apartats de Victor.

--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -51,12 +51,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from statsmodels.tsa.seasonal import seasonal_decompose\n",
     "import matplotlib.patches as mpatches\n",
     "import avocado_manager as av\n",
+    "\n",
+    "color_orga ='green'; color_conv ='grey'; color_total ='blue'\n",
     "av.init()\n",
     "df_cp = av.df(\"df_cp\")\n",
     "print(df_cp.info())\n",
@@ -602,7 +605,7 @@
    "source": [
     "grouped = df_cp.groupby(['year', 'type'])['Total Volume'].sum()\n",
     "fig, ax= plt.subplots(figsize=(12,3))\n",
-    "grouped.plot(kind='bar', color=['grey', 'green'])\n",
+    "grouped.plot(kind='bar', color=[color_conv, color_orga])\n",
     "plt.xlabel('Año y tipo')\n",
     "plt.ylabel('Total Volume')\n",
     "plt.xticks(rotation=45, ha='right')\n",
@@ -681,7 +684,7 @@
     "grouped = df_subset.groupby(['region', 'type'])['Total Volume'].sum()\n",
     "\n",
     "fig, ax= plt.subplots(figsize=(20,4))\n",
-    "grouped.plot(kind='bar', ax=ax, color = ['gray', 'green'] )\n",
+    "grouped.plot(kind='bar', ax=ax, color = [color_conv, color_orga] )\n",
     "# plt.ylim(0, 0.3*10**9)\n",
     "plt.grid()"
    ]
@@ -696,7 +699,7 @@
     "price_group = df_subset.groupby(['region', 'type'])['AveragePrice'].mean()#.nlargest(10)\n",
     "\n",
     "fig, ax= plt.subplots(figsize=(20,4))\n",
-    "price_group.plot(kind='bar', ax=ax, color = ['gray', 'green'] )\n",
+    "price_group.plot(kind='bar', ax=ax, color = [color_conv, color_orga] )\n",
     "# plt.ylim(0, 0.3*10**9)\n",
     "plt.grid()"
    ]
@@ -717,12 +720,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_subset = df_cp\n",
     "avocados_region_mean = df_subset.groupby(['region','type'])['AveragePrice'].mean()#.nlargest(6)\n",
     "\n",
     "total_mean = df_subset['AveragePrice'].mean()\n",
     "fig, ax= plt.subplots(figsize=(20,4))\n",
     "avocados_relative_mean = (avocados_region_mean - total_mean)*100/total_mean\n",
-    "avocados_relative_mean.plot(kind = 'bar', ylabel= '% Price deviation', color = ['slategray', 'forestgreen'])\n",
+    "avocados_relative_mean.plot(kind = 'bar', ylabel= '% Price deviation', color = [color_conv, color_orga]) # 'slategray', 'forestgreen'])\n",
     "plt.grid()"
    ]
   },
@@ -828,7 +832,7 @@
     "\n",
     "# Graficar\n",
     "plt.figure(figsize=(10, 2)) \n",
-    "df_year_price.plot.bar(label ='Precio medio', color ='blue', alpha=1) # x='aaa??',y='bbb??',\n",
+    "df_year_price.plot.bar(label ='Precio medio', color = color_total, alpha=1) # x='aaa??',y='bbb??',\n",
     "plt.xlabel('Año')\n",
     "plt.ylabel('Precio medio')\n",
     "plt.title('Precio medio anual')\n",
@@ -838,8 +842,8 @@
     "\n",
     "\n",
     "plt.figure(figsize=(10, 2)) \n",
-    "df_year_price_organic.plot.bar(label ='Precio medio alvocado organic', color ='green') # x='aaa??',y='bbb??',\n",
-    "df_year_price_conventional.plot.bar(label ='Precio medio alvocado conventional', color ='grey') # x='aaa??',y='bbb??',\n",
+    "df_year_price_organic.plot.bar(label ='Precio medio alvocado organic', color = color_orga) # x='aaa??',y='bbb??',\n",
+    "df_year_price_conventional.plot.bar(label ='Precio medio alvocado conventional', color = color_conv) # x='aaa??',y='bbb??',\n",
     "#df_year_price.plot.bar(label ='Precio medio', color ='blue', alpha=0.2) # x='aaa??',y='bbb??',\n",
     "plt.xlabel('Año')\n",
     "plt.ylabel('Precio medio')\n",
@@ -1081,7 +1085,7 @@
     "    convencional_region_mean_total.loc[(region, 'organic'),'Total Volume'] = convencional_region_mean_total.loc[(region, 'conventional'),'Total Volume']\n",
     "\n",
     "new_convencional_region_mean_total= convencional_region_mean_total.reset_index(level='type') \n",
-    "type_coloring= {'organic':'green', 'conventional':'gray'}\n",
+    "type_coloring= {'organic':color_orga, 'conventional':color_conv}\n",
     "\n",
     "fig, ax= plt.subplots(figsize=(20,4))\n",
     "x_values = new_convencional_region_mean_total['Total Volume']\n",
@@ -1105,10 +1109,171 @@
   },
   {
    "cell_type": "markdown",
+   "id": "09a4258a",
+   "metadata": {},
+   "source": [
+    "#### Boxplot Comparativo de Precios entre Años"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cf2b4f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.set_style('whitegrid')\n",
+    "plt.figure(figsize=(12,4))\n",
+    "sns.boxplot(df_cp_conventional, x=\"year\", y=\"AveragePrice\", fill=False, gap=.5, color = color_conv)\n",
+    "plt.title(\"Average Price por año - alvocado: Convencional\")#,{'fontsize':20})\n",
+    "plt.xlabel('Año')#,{'fontsize' : 'large'})\n",
+    "plt.ylabel('Precio medio')#,{'fontsize':'large'})\n",
+    "plt.show()\n",
+    "\n",
+    "plt.figure(figsize=(12,4))\n",
+    "sns.boxplot(df_cp_cleaned, x=\"year\", y=\"AveragePrice\", hue='type', fill=False, gap=0.5)\n",
+    "plt.title(\"Average Price por año y tipo\") #,{'fontsize':40})\n",
+    "plt.xlabel('Año') #,{'fontsize' : 30})\n",
+    "plt.ylabel('Precio medio') #,{'fontsize':'large'})\n",
+    "plt.show()\n",
+    "sns.reset_defaults()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9a80661",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b932bfc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cp = av.df(\"df_cp\")\n",
+    "df_cp_organic = df_cp[df_cp['type'] =='organic']\n",
+    "#regiones = ['West', 'California']\n",
+    "regiones = av.Manager.obtener_regions('GreaterRegion')\n",
+    "df_filtrado = df_cp_organic[df_cp_organic['region'].isin(regiones)]\n",
+    "\n",
+    "plt.figure(figsize=(20,4))\n",
+    "sns.boxplot(df_filtrado, x=\"year\", y=\"AveragePrice\", hue=\"region\", dodge=True, fill=False, gap=.2)\n",
+    "plt.title(\"Average Price Organico por año y region\",{'fontsize':20})\n",
+    "plt.xlabel('Año')#,{'fontsize' : 'large'})\n",
+    "plt.ylabel('Region')#,{'fontsize':'large'})\n",
+    "plt.legend(loc='best') #, bbox_to_anchor=(1, 1), ncol=1)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c5b6ba4",
+   "metadata": {},
+   "source": [
+    "#### Histograma de Volumen Total de Ventas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ad2e47d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cp_cleaned=df_cp[df_cp.region != 'TotalUS']\n",
+    "\n",
+    "sns.set_style('whitegrid')\n",
+    "plt.figure(figsize=(20,6))\n",
+    "plt.xlim(0.0,0.6*10**7)\n",
+    "plt.ylim(0.0,2*10**-6)\n",
+    "plt.title('Histograma de Ventas Totales', fontweight = \"bold\")\n",
+    "plt.hist(df_cp_cleaned['Total Volume'], bins= 200, density=0.5, color='green',alpha=0.9)\n",
+    "plt.xlabel('Ventas')\n",
+    "plt.ylabel('Frecuencia')\n",
+    "plt.show()\n",
+    "sns.reset_defaults()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a3581c3",
+   "metadata": {},
+   "source": [
+    "#### Precios Promedios por Año"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f22b65e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y=df_cp.groupby(['year'])['AveragePrice'].mean()\n",
+    "x=(df_cp['year'].unique())\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(x, y)\n",
+    "plt.title('Precios Promedios por Año')\n",
+    "plt.grid()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "50f15efe-2d06-486a-bc4d-4f4679974a10",
    "metadata": {},
    "source": [
     "#### Separar alvocados convencionales y organicos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27d21f45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cp = av.df(\"df_cp\")\n",
+    "average_prices = df_cp['AveragePrice']\n",
+    "print(f\"AveragePrice: min: {df_cp['AveragePrice'].min()} max: {df_cp['AveragePrice'].max()}\")\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.histplot(average_prices, bins=100, kde=True, color='skyblue')\n",
+    "plt.title('Histogram of Average Avocado Prices')\n",
+    "plt.xlabel('Average Price')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.grid()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e4a9b3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cp = av.df(\"df_cp\")\n",
+    "average_price_by_type = df_cp.groupby('type')['AveragePrice'].mean()\n",
+    "print(average_price_by_type)\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.hist(\n",
+    "    [df_cp_cleaned[df_cp_cleaned['type'] == 'conventional']['AveragePrice'], \n",
+    "     df_cp_cleaned[df_cp_cleaned['type'] == 'organic']['AveragePrice']],\n",
+    "    bins=100, label=['Conventional', 'Organic'], alpha=0.9\n",
+    ")\n",
+    "\n",
+    "# Add titles and labels\n",
+    "plt.title(\"Histogram of Average Avocado Prices by Type\")\n",
+    "plt.xlabel(\"Average Price\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.legend(loc='upper right')\n",
+    "plt.grid()"
    ]
   },
   {
@@ -1154,6 +1319,82 @@
   },
   {
    "cell_type": "markdown",
+   "id": "de299179",
+   "metadata": {},
+   "source": [
+    "#### Ventas por Tipo de Bolsa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4758c07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tipos_bolsas=['Total Bags','Small Bags','Large Bags','XLarge Bags']\n",
+    "ventas=[df_cp['Total Bags'].sum(),df_cp['Small Bags'].sum(),df_cp['Large Bags'].sum(),df_cp['XLarge Bags'].sum()]\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.title('Grafico de Barras por Tipo de Bolsa', fontweight = \"bold\")\n",
+    "plt.xlabel(\"Tipo de Bolsa\")\n",
+    "plt.ylabel(\"Ventas\")\n",
+    "plt.grid()\n",
+    "plt.bar(tipos_bolsas,ventas, color = color_total, width=0.4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbca16fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cp_organic = av.df(\"df_cp_organic\")\n",
+    "ventas_org=[df_cp_organic['Total Bags'].sum(),df_cp_organic['Small Bags'].sum(),df_cp_organic['Large Bags'].sum(),df_cp_organic['XLarge Bags'].sum()]\n",
+    "plt.title('Grafico de Barras por Tipo de Bolsa Organica', fontweight = \"bold\")\n",
+    "plt.xlabel(\"Tipo de Bolsa\")\n",
+    "plt.ylabel(\"Ventas\")\n",
+    "plt.bar(tipos_bolsas,ventas_org, color = color_orga, width=0.4)\n",
+    "plt.show()\n",
+    "\n",
+    "df_cp_conventional = av.df(\"df_cp_conventional\")\n",
+    "ventas_conv=[df_cp_conventional['Total Bags'].sum(),df_cp_conventional['Small Bags'].sum(),df_cp_conventional['Large Bags'].sum(),df_cp_conventional['XLarge Bags'].sum()]\n",
+    "plt.title('Grafico de Barras por Tipo de Bolsa Convencional', fontweight = \"bold\")\n",
+    "plt.xlabel(\"Tipo de Bolsa\")\n",
+    "plt.ylabel(\"Ventas\")\n",
+    "plt.bar(tipos_bolsas,ventas_conv, color = color_conv, width=0.4)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "796917e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cp_organic = av.df(\"df_cp_organic\")\n",
+    "df_cp_conventional = av.df(\"df_cp_conventional\")\n",
+    "\n",
+    "ventas_org=[df_cp_organic['Total Bags'].sum(),df_cp_organic['Small Bags'].sum(),df_cp_organic['Large Bags'].sum(),df_cp_organic['XLarge Bags'].sum()]\n",
+    "ventas_conv=[df_cp_conventional['Total Bags'].sum(),df_cp_conventional['Small Bags'].sum(),df_cp_conventional['Large Bags'].sum(),df_cp_conventional['XLarge Bags'].sum()]\n",
+    "\n",
+    "x = np.arange(len(tipos_bolsas))  # Posición de cada tipo de bolsa\n",
+    "width = 0.35\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.bar(x + width/2, ventas_org, width, label='Orgánico', color= color_orga)\n",
+    "plt.bar(x - width/2, ventas_conv, width, label='Convencional', color= color_conv)\n",
+    "plt.title('Ventas por Tipo de Bolsa: Orgánica vs Convencional', fontweight=\"bold\")\n",
+    "plt.xlabel(\"Tipo de Bolsa\")\n",
+    "plt.ylabel(\"Ventas\")\n",
+    "plt.xticks(x, tipos_bolsas)  # Posicionar etiquetas en el centro de los grupos de barras\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f083904f",
    "metadata": {},
    "source": [
@@ -1174,6 +1415,7 @@
     "# df_cp_cleaned_city = df_cp_cleaned[df_cp_cleaned['region_class']=='City']\n",
     "region_largest= df_cp_cleaned.groupby('region')['Total Volume'].sum().nlargest(5).index\n",
     "\n",
+    "plt.figure(figsize=(10, 6))\n",
     "transparencia = 1\n",
     "for region in region_largest:#, 'TotalUS']:#.nlargest(6)\n",
     "    df_cp_temp = df_cp_cleaned[df_cp_cleaned['region'] ==region]\n",
@@ -1185,6 +1427,7 @@
     "    transparencia-=0.2\n",
     "plt.show()\n",
     "\n",
+    "plt.figure(figsize=(10, 6))\n",
     "transparencia = 1\n",
     "for region in ['LosAngeles', 'NewYork', 'Houston']:#, 'TotalUS']:#.nlargest(6)\n",
     "    df_cp_temp = df_cp_cleaned[df_cp_cleaned['region'] ==region]\n",
