Fer plt.show() a grafics on falta.

--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -1273,7 +1273,8 @@
     "plt.xlabel(\"Average Price\")\n",
     "plt.ylabel(\"Frequency\")\n",
     "plt.legend(loc='upper right')\n",
-    "plt.grid()"
+    "plt.grid()\n",
+    "plt.show()"
    ]
   },
   {
@@ -1352,6 +1353,7 @@
    "source": [
     "df_cp_organic = av.df(\"df_cp_organic\")\n",
     "ventas_org=[df_cp_organic['Total Bags'].sum(),df_cp_organic['Small Bags'].sum(),df_cp_organic['Large Bags'].sum(),df_cp_organic['XLarge Bags'].sum()]\n",
+    "plt.figure(figsize=(10, 6))\n",
     "plt.title('Grafico de Barras por Tipo de Bolsa Organica', fontweight = \"bold\")\n",
     "plt.xlabel(\"Tipo de Bolsa\")\n",
     "plt.ylabel(\"Ventas\")\n",
@@ -1360,6 +1362,7 @@
     "\n",
     "df_cp_conventional = av.df(\"df_cp_conventional\")\n",
     "ventas_conv=[df_cp_conventional['Total Bags'].sum(),df_cp_conventional['Small Bags'].sum(),df_cp_conventional['Large Bags'].sum(),df_cp_conventional['XLarge Bags'].sum()]\n",
+    "plt.figure(figsize=(10, 6))\n",
     "plt.title('Grafico de Barras por Tipo de Bolsa Convencional', fontweight = \"bold\")\n",
     "plt.xlabel(\"Tipo de Bolsa\")\n",
     "plt.ylabel(\"Ventas\")\n",
@@ -2047,7 +2050,8 @@
     "plt.xscale('log')\n",
     "plt.grid()\n",
     "plt.title('TotalUS')\n",
-    "plt.figure()"
+    "plt.figure()\n",
+    "plt.show()"
    ]
   },
   {
@@ -2072,6 +2076,7 @@
     "plt.grid()\n",
     "plt.title('TotalUS Organic')\n",
     "plt.figure()\n",
+    "plt.show()\n",
     "\n",
     "# df_local = df_cp[(df_cp['region']!='TotalUS')&(df_cp['region_class']!='GreaterRegion')].copy()\n",
     "df_local_region=df_local[df_local['region_class']=='City']\n",
@@ -2083,7 +2088,8 @@
     "plt.xscale('log')\n",
     "plt.title('City Organic')\n",
     "plt.grid()\n",
-    "plt.figure()"
+    "plt.figure()\n",
+    "plt.show()"
    ]
   },
   {
@@ -2107,6 +2113,7 @@
     "plt.grid()\n",
     "plt.title('TotalUS')\n",
     "plt.figure()\n",
+    "plt.show()\n",
     "\n",
     "# df_local = df_cp[(df_cp['region']!='TotalUS')&(df_cp['region_class']!='GreaterRegion')].copy()\n",
     "df_local_region=df_local[df_local['region_class']=='City']\n",
@@ -2118,7 +2125,8 @@
     "plt.xscale('log')\n",
     "plt.title('City')\n",
     "plt.grid()\n",
-    "plt.figure()"
+    "plt.figure()\n",
+    "plt.show()"
    ]
   },
   {
